<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddActivity">

    <TextView
            android:text="@string/NT_L2_add_naglowek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/NT_L2_add_naglowek"
            android:textColor="@color/shiraz"
            android:id="@+id/add_txt_title" android:layout_marginTop="@dimen/NT_L2_margin"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/NT_L2_margin" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/NT_L2_margin"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:text="@string/NT_L2_add_urlexample"
            android:textSize="@dimen/NT_L2_add_txt"
            android:ems="10"
            android:id="@+id/add_url_edit" android:layout_marginTop="@dimen/NT_L2_margin"
            app:layout_constraintTop_toBottomOf="@+id/add_url_txt" android:layout_marginStart="@dimen/NT_L2_margin"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/NT_L2_margin"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/NT_L2_add_txtURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/NT_L2_add_etykieta"
            android:id="@+id/add_url_txt" android:layout_marginTop="@dimen/NT_L2_margin"
            app:layout_constraintTop_toBottomOf="@+id/add_txt_title" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/NT_L2_margin"/>
    <TextView
            android:text="@string/NT_L2_add_txtnazwa"
            android:textSize="@dimen/NT_L2_add_etykieta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_name_txt" android:layout_marginTop="@dimen/NT_L2_margin"
            app:layout_constraintTop_toBottomOf="@+id/add_url_edit" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/NT_L2_margin"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="@dimen/NT_L2_add_txt"
            android:text=""
            android:ems="10"
            android:id="@+id/add_name_edit" android:layout_marginTop="@dimen/NT_L2_margin"
            app:layout_constraintTop_toBottomOf="@+id/add_name_txt" android:layout_marginStart="@dimen/NT_L2_margin"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/NT_L2_add_Data"
            android:textSize="@dimen/NT_L2_add_etykieta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_date_txt" android:layout_marginTop="@dimen/NT_L2_margin"
            app:layout_constraintTop_toBottomOf="@+id/add_name_edit" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/NT_L2_margin"/>
    <TextView
            android:text = "@string/NT_L2_add_editData"
            android:textSize="@dimen/NT_L2_add_txt"
            android:textColor="@color/shark"
            android:layout_width="216dp"
            android:layout_height="38dp"
            android:onClick="wprowadzDate"
            android:ems="10"
            android:id="@+id/add_date_edit" android:layout_marginTop="@dimen/NT_L2_margin"
            app:layout_constraintTop_toBottomOf="@+id/add_date_txt" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/NT_L2_margin"/>
    <Button
            android:text="@string/NT_L2_add_buttonDodaj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_button"
            android:textSize="@dimen/NT_L2_add_buttonsize"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/NT_L2_margin" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/NT_L2_margin"
            android:onClick="dodaj" android:layout_marginTop="@dimen/NT_L2_add_button"
            app:layout_constraintTop_toBottomOf="@+id/add_date_edit" app:layout_constraintHorizontal_bias="0.498"/>
</android.support.constraint.ConstraintLayout>